--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.25.0",
     "html-react-parser": "^1.4.7",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.3",
     "react-redux": "^7.2.6",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.5",
     "@types/react-router-dom": "^5.3.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
