--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
     "axios": "^0.25.0",
+    "d3-ease": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
     "react-hotkeys-hook": "^3.4.4",
+    "react-move": "^6.5.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-ease": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
