feat : add  gameplay

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "use-sound": "^4.0.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
